--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "funkhaus-format-login",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^2.9.0",
     "prompt": "^1.0.0"
   }
 }
