--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_PATH=. node index.js",
+    "dev": "cross-env NODE_PATH=. node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
